fixed page overflow

--- a/client/src/components/home/home.module.css
+++ b/client/src/components/home/home.module.css
@@ -103,6 +103,7 @@
 
 .pagination_div {
     display: flex;
+    flex-wrap:wrap;
     justify-content: center;
     margin: 20px 0px;
 }
