--- a/client/src/components/page/page.module.css
+++ b/client/src/components/page/page.module.css
@@ -1,8 +1,15 @@
+.page_div{
+    display: flex;
+    justify-self: center;
+
+}
+
+
 .current_page {
+    display: flex;
     color: white;
     margin: 0 6px;
     padding: 5px;
-
 }
 
 .active_page {
